<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.rchemist</groupId>
    <artifactId>rcm-backend-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>

  <artifactId>backend-api</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>API</name>
  <description>REST API for Backend Service</description>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.uri>${project.baseUri}/../</project.uri>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <shedlock-spring.version>5.2.0</shedlock-spring.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>io.rchemist</groupId>
      <artifactId>common-framework</artifactId>
    </dependency>

    <dependency>
      <groupId>io.rchemist</groupId>
      <artifactId>backend-core</artifactId>
    </dependency>

    <dependency>
      <groupId>io.rchemist</groupId>
      <artifactId>common-data-jpa</artifactId>
    </dependency>

    <dependency>
      <groupId>io.rchemist</groupId>
      <artifactId>common-security</artifactId>
    </dependency>

    <dependency>
      <groupId>io.rchemist</groupId>
      <artifactId>module-workflow</artifactId>
    </dependency>

    <dependency>
      <groupId>io.rchemist</groupId>
      <artifactId>module-activemq</artifactId>
    </dependency>

    <dependency>
      <groupId>io.rchemist</groupId>
      <artifactId>module-asset</artifactId>
    </dependency>

    <dependency>
      <groupId>io.rchemist</groupId>
      <artifactId>module-article</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-messaging</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-config</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-messaging</artifactId>
    </dependency>

    <!-- https://mvnrepository.com/artifact/net.javacrumbs.shedlock/shedlock-spring -->
    <dependency>
      <groupId>net.javacrumbs.shedlock</groupId>
      <artifactId>shedlock-spring</artifactId>
      <version>${shedlock-spring.version}</version>
    </dependency>

    <dependency>
      <groupId>net.javacrumbs.shedlock</groupId>
      <artifactId>shedlock-provider-jdbc-template</artifactId>
      <version>${shedlock-spring.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-mail</artifactId>
    </dependency>

  </dependencies>

  <pluginRepositories>
    <pluginRepository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
    <pluginRepository>
      <id>spring milestones</id>
      <url>https://repo.spring.io/milestone</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${maven-dependency-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <useSystemClassLoader>true</useSystemClassLoader>
          <skip>false</skip><skipTests>true</skipTests>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <jvmArguments>
            --add-opens java.base/java.lang=ALL-UNNAMED -javaagent:../library/spring-instrument-6.0.7.jar
          </jvmArguments>
          <executable>true</executable>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <verbose>true</verbose>
          <fork>true</fork>
          <source>17</source>
          <target>17</target>
          <compilerVersion>17</compilerVersion>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
          <forceJavacCompilerUse>true</forceJavacCompilerUse></configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>development</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <version>3.0.0</version>
            <executions>
              <execution>
                <goals>
                  <goal>repackage</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <jvmArguments>
                -Dspring.profiles.active=development --add-opens java.base/java.lang=ALL-UNNAMED -javaagent:../library/spring-instrument-6.0.7.jar
              </jvmArguments>
              <executable>true</executable>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>production</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <version>3.0.0</version>
            <executions>
              <execution>
                <goals>
                  <goal>repackage</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <jvmArguments>
                -Dspring.profiles.active=production --add-opens java.base/java.lang=ALL-UNNAMED -javaagent:../library/spring-instrument-6.0.7.jar
              </jvmArguments>
              <executable>true</executable>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>